--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -51,6 +51,7 @@
   padding-left: 10px;
   padding-right: 10px;
 }
+
 .header a {
   transition: 0.2s opacity;
 }
@@ -65,8 +66,6 @@
 
 .main h1 {
   margin-block-end: 0;
-  /* font-size: 2.5rem; */
-
 }
 
 .main h2 {
@@ -77,12 +76,19 @@
 
 .main p {
   margin-block-start: 0;
-  /* font-size: 1.2rem; */
 }
 
 .main a {
   text-decoration: underline;
   color: #0074D9;
+}
+
+.main .grid > div {
+  flex: 1 1 0;
+}
+
+.main .grid > div:not(:last-child) {
+  margin-right: 30px;
 }
 
 @media (max-width: 1100px) {
